@@ -2,8 +2,11 @@
 package yutgame.controller;
 
 import java.util.*;
-import yutgame.model.*;
-import yutgame.view.*;
+import java.util.stream.Collectors;
+
+import yutgame.model.GameModel;
+import yutgame.model.Piece;
+import yutgame.view.IGameView;
 
 /**
  * 윷 던지기 버튼과 말 이동을 제어하는 컨트롤러입니다.
@@ -12,8 +15,9 @@ public class YutThrowController {
     private final IGameView view;
     private final GameModel model;
     private final GameController controller;
+    // 마지막으로 윷 던진 후 이동할 수 있는 말 목록
     private List<Piece> lastMovable = List.of();
-    // "<ownerId>@<startPos>" 형태의 키로 한 번 뭉친 그룹을 추적합니다.
+    // "<ownerId>@<startPos>" 로 그룹화된 키를 기록
     private final Set<String> groupedKeys = new HashSet<>();
 
     public YutThrowController(IGameView view, GameModel model, GameController controller) {
@@ -21,46 +25,56 @@ public class YutThrowController {
         this.model      = model;
         this.controller = controller;
 
-        // 1) 윷 던지기 이벤트
+        // 1) 윷 던지기 이벤트 등록
         view.onThrow(() -> {
             int res = model.throwYut();
             view.showResult(res);
 
+            // 윷·모가 아니면 버튼 잠그기
+            if (res != 4 && res != 5) {
+                view.disableThrow();
+            }
+
+            // 이동 가능 말 계산
             lastMovable = model.getMovablePieces();
             boolean hasMove = lastMovable.stream()
                 .anyMatch(p -> !(res == 0 && p.getPosition() == 0));
             if (!hasMove) {
+                // 이동할 말이 없으면 바로 턴 넘기고 버튼 다시 활성화
                 controller.nextTurn();
+                view.enableThrow();
             }
         });
 
-        // 2) 말 선택 이벤트 (인벤토리 또는 보드)
+        // 2) 말 선택 이벤트 (인벤토리·보드 공통)
         view.onPieceSelected(this::handleMove);
     }
 
     private void handleMove(Piece piece) {
+        // 던진 뒤 이동 가능하지 않으면 무시
         if (!lastMovable.contains(piece)) return;
 
         int startPos = piece.getPosition();
         String ownerId = piece.getId().split("_")[0];
         String key = ownerId + "@" + startPos;
 
-        // 같은 칸에 있는, 같은 플레이어 소유의 말들
+        // 같은 칸, 같은 플레이어 소유의 말들
         List<Piece> cellPieces = model.getPiecePositions().stream()
             .filter(p -> p.getPosition() == startPos)
             .filter(p -> p.getId().startsWith(ownerId + "_"))
-            .toList();
+            .collect(Collectors.toList());
 
+        // 그룹화 로직
         List<Piece> toMove;
         if (groupedKeys.contains(key)) {
-            // 이미 그룹에 묶인 경우: 계속 그룹 전체 이동
+            // 이미 그룹에 속해 있으면 전부 이동
             toMove = cellPieces;
         } else if (startPos != 0 && cellPieces.size() >= 2) {
-            // 0이 아닌 칸에서 처음 두 개 이상 뭉친 순간
+            // 처음 두 개 이상 뭉쳤을 때 그룹에 등록
             groupedKeys.add(key);
             toMove = cellPieces;
         } else {
-            // 그 외: 클릭한 말 하나만 이동
+            // 그 외엔 클릭한 말 하나만 이동
             toMove = List.of(piece);
         }
 
@@ -68,7 +82,7 @@ public class YutThrowController {
         toMove.forEach(model::movePiece);
         int dest = toMove.get(0).getPosition();
 
-        // 포획 처리: 도착지에 상대말이 있으면 start(0)로 돌려보냄
+        // 상대 말 포획: dest 에 상대말이 있으면 출발점으로
         model.getPiecePositions().stream()
             .filter(p -> p.getPosition() == dest)
             .filter(p -> !p.getId().startsWith(ownerId + "_"))
@@ -77,10 +91,16 @@ public class YutThrowController {
         // 뷰 갱신
         view.refreshBoard(model.getPiecePositions());
         view.refreshInventory(model.getPiecePositions());
-        // ★ 추가: 골인 점수 반영
-        view.updateScore(0);
+        view.updateScore(0);  // SwingGameView 쪽에서 실제 score를 읽어 옵니다
 
-        // 턴 종료
-        controller.nextTurn();
+        // extraTurn 여부에 따라 차례 유지 or 넘기기
+        if (model.isTurnOver()) {
+            // 추가 턴 없음 → 다음 턴으로
+            controller.nextTurn();
+        }
+        // 윷(4)·모(5) 였으면 같은 플레이어가 또 던지기 가능
+
+        // 버튼 다시 활성화
+        view.enableThrow();
     }
 }
